Fix toast on mobile to not be hidden

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -58,4 +58,7 @@ body {
     text-align: center;
     padding: 2rem !important;
   }
+  #toast {
+    margin-left: -175px;
+  }
 }
